# arxiv-mcp

./: .coverage  .flake8  .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX.md  PRODUCTION_STATUS.md  PROJECT_ROOT.md  README.md  TESTING_ENHANCEMENT_SUMMARY.md  TODO.md  TODO_ENHANCED.md  TODO_REORGANIZED.md  UPDATE.md  bulk_line_fixer.py  debug_mcp.py  fix_critical.py  pyproject.toml  safe_line_fixer.py  safe_line_fixer_v2.py  test_implementation_plan.md  test_mcp_tools.py  test_minimal_mcp.py
.github/: .knowledge_base_test  copilot-instructions.md
.github/instructions/: ABSOLUTE-RULE-PYTHON.instruction.md  ABSOLUTE-RULE-WORKSPACE.instructions.md  DONT.instructions.md  absolute-rules-of-conduct.instructions.md
.github/prompts/: fix-retctification.prompt.md  side-prompt-for-tool-usage.md
arxiv-mcp-dev/: batch_download_and_convert.json  cleanup_output.json  get_processing_metrics.json  search_arxiv.json
arxiv-mcp-dev/markdown/1706.03762/: 1706.03762.md
arxiv-mcp-dev/metadata/: 1706.03762.json
arxiv_cache/: cache.db
arxiv_mcp_test_output/metadata/: 2012.00311.json
config/: README.md  arxiv_mcp_example.yaml  arxiv_mcp_production.json
dependency_cache/: dependencies.db
docs/: LATEX_MARKDOWN_PROCESSING.md  README.md  WORKSPACE_CLEANUP_SUMMARY.md  WORKSPACE_ENFORCEMENT_GUIDE.md  directory-analysis-2025-09-11.md  workspace-analysis-2025-09-11.md  workspace-reorganization-plan.md
docs/api/: api_documentation.json  api_documentation.md
docs/archive/: PHASE_4A_ITEM_1_SUMMARY.md
docs/archive/september-2025/: IMPLEMENTATION_SUMMARY.md  README.md
examples/: README.md  demo_phase_4a_item_1.py
notification_cache/: notifications.db
output/dev/: analyze_citation_network.json  download_and_convert_paper.json  extract_citations.json  fetch_arxiv_paper_content.json  get_output_structure.json  validate_conversion_quality.json
output/test/metadata/: 2401.03297.json
reading_cache/: reading_lists.db
scripts/: validate_workspace.py
src/: README.md
src/arxiv_mcp/: __init__.py  __main__.py  exceptions.py  fastmcp_tools.py  models.py  tools.py
src/arxiv_mcp/analyzers/: __init__.py  network_analyzer.py
src/arxiv_mcp/clients/: __init__.py  arxiv_api.py
src/arxiv_mcp/core/: config.py  enhanced_config.py  pipeline.py
src/arxiv_mcp/parsers/: __init__.py  citation_parser.py
src/arxiv_mcp/processors/: __init__.py  document_processor.py
src/arxiv_mcp/utils/: auto_summarizer.py  batch_operations.py  citations.py  dependency_analysis.py  docs_generator.py  file_saver.py  latex_fetcher.py  latex_to_markdown.py  logging.py  metrics.py  network_analysis.py  optional_deps.py  paper_notifications.py  reading_lists.py  retry.py  search_analytics.py  smart_tagging.py  trending_analysis.py  unified_converter.py  validation.py
tag_cache/: tags.db
tests/: README.md  smart_validation.py  test_document_processor.py  test_enhanced_features.py  test_mcp_integration.py  test_modular_integration.py  test_new_implementations.py  test_new_implementations.py.disabled  test_priority_features.py  test_pydantic_models.py  test_smart_new_features.py  test_tools.py
tests/integration/: test_mcp_integration.py
tools/: automated_quality_improver.py  docstring_analyzer.py
trending_cache/: trending.db
